MySqlEmbeddedStorage: don't use QString::toAscii(), fix bug 313914

It is 2013. We have more characters than 128.

BUGFIXES:
 * Fix inability to create database when home directory contains
   non-ASCII characters.

BUG: 313914